# fomod

./: Cargo.toml
examples/: simple.rs
examples/fomod/: ModuleConfig.xml  info.xml
src/: lib.rs  spec.rs
src/spec/: files.rs  types.rs
