[package]
name = "fomod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["mods", "skyrim", "fallout", "skyrim", "starfield"]
repository = "https://github.com/luctius/fomod"

[dependencies]
quick-xml = {version ="0.30.0", features = ["serialize", "serde-types"]}
serde = { version = "1.0.188", features = ["derive"]}
