[package]
name = "fomod"
version = "0.2.2"
edition = "2021"
authors = ["Luctius Invictus"]
license = "MIT OR Apache-2.0"
keywords = ["mods", "skyrim", "fallout", "skyrim", "starfield"]
repository = "https://github.com/luctius/fomod"
description = "fomod is game-agnostic format for mod installers, written in xml. This crate can read fomod packages."

[dependencies]
quick-xml = {version ="0.30.0", features = ["serialize", "serde-types"]}
serde = { version = "1.0.188", features = ["derive"]}
